# redlist

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE.txt  README.md  build_final.spec  hook-runtime-paddle.py  hook-runtime-stub-cpp-ext.py  hook_paddleocr.py  installer.nsi  main.py  ocr_diag2_main.py  ocr_diag_main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: quality.yml
docs/: architecture.md  developer-guide.md  llm-integration.md  release-notes.md  user-guide.md
resources/heartbeat3d/: heartbeat3d.js  index.html
resources/sounds/: alarm1.mid  alarm2.mid  alarm3.mid  default.mid
scripts/: post_build_verify.py  pre_build_check.py  pre_commit_check_secrets.py
src/: main_window.py  screenshot.py  screenshot_legacy.py  screenshot_translate.py  settings.py  settings_panel.py  sticky_note.py  task_panel.py  theme.py  timer.py
src/core/: exceptions.py
src/llm_chat/: chat_display.py  chat_panel.py  chinese_menu.py  config.py  conversation_list.py  conversation_manager.py  exceptions.py  input_bar.py  llm_service.py  model_dialog.py  prompt_expert_dialog.py  types.py
src/ocr/: ocr_service.py  (+1 more)
tests/: conftest.py  test_cache.py  test_color.py  test_config.py  test_conversation_manager.py  test_debounce.py  test_encoding.py  test_exceptions.py  test_geometry.py  test_input_bar_content.py  test_llm_service.py  test_logger.py  test_ocr_service.py  test_ocr_thread.py  test_prompt_expert_dialog.py  test_screenshot_translate.py  test_screenshot_translation_thread.py  test_settings.py  test_sound.py  test_translation_service.py
(+25 files in other folders)
