[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "redlist"
version = "3.0.0"
description = "截图翻译与文字提取桌面工具"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "PyQt6>=6.6",
    "Pillow>=10.0",
    "mss>=9.0",
    "requests>=2.31",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/anomalyco/redlist"

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N"]
ignore = ["N801", "N802", "N803", "N806", "N815", "N816"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"
markers = [
    "heavy: marks tests that need heavy dependencies (PaddlePaddle, PyQt6)",
]


